k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-pod-2
  namespace: lab4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-pod-2
  template:
    metadata:
      labels:
        app: my-pod-2
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
