k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-2
  namespace: lab4
spec:
  type: ClusterIP
  selector:
    app: my-pod-2
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
